public/base.css
/* Typography */
.data-\[state\=checked\]\:dark\:before\:\!bg-superDark[data-state='checked']:before,
.dark .data-\[state\=checked\]\:dark\:before\:\!bg-superDark[data-state='checked']:before {
  background-color: var(--accent-foreground) !important;
}

.prose :where(code):not(:where([class~='not-prose'] *))::before,
.prose :where(code):not(:where([class~='not-prose'] *))::after {
  content: '' !important;
}

.prose :where(code):not(:where([class~='not-prose'] *)) {
  background-color: var(--secondary);
  color           : var(--accent-foreground) !important;
  padding         : 0.1rem 0.3125rem !important;
  border-radius   : 0.375rem !important;
}

.citation>div>span>div {
  background-color: var(--accent-foreground) !important;
  color           : white !important;
  border-radius   : 0.375rem !important;
}

.citation>div>span>div:not(:hover) {
  opacity: 0.5 !important;
}

strong,
h2,
h3,
h4,
h5,
h6 {
  color: var(--accent-foreground) !important;
}

th {
  border: 1px solid var(--border) !important;
  color : var(--foreground) !important;
}

.pt-md.md\:pt-0>div>div:nth-child(1)>div>div>div:last-child {
  border-color: var(--ring-darker) !important;
}


/* Background */
html,
html.dark,
:is(.dark .dark\:bg-backgroundDark) {
  background-color: var(--background) !important;
}

div.dark\:\!bg-textMainDark:is(.dark *) {
  background-color: var(--background) !important;
}

/* Side Navigation */
:is(.dark .dark\:bg-offsetDark),
:is(.dark .dark\:\!bg-offsetDark),
:is(.dark .dark\:focus\:bg-offsetDark:focus),
:is(.dark .md\:dark\:hover\:bg-offsetDark:hover) {
  background-color: var(--secondary) !important;
}

.hebEKa,
.gnFpAY {
  background-color: var(--secondary) !important;
}

.group:hover .group-hover\:\!bg-super {
  background-color: var(--accent-foreground) !important;
}

.dark .dark\:bg-superDark\/10,
.dark .bg-super\/10 {
  background-color: var(--accent-foreground-darker) !important;

  & .text-super.dark\:text-superDark {
    color: white !important;
  }
}

.markdown-highlight,
.selection\:bg-superDuper::selection,
.selection\:text-textMain ::selection,
.dark .dark\:selection\:text-super ::selection {
  background-color: var(--selection) !important;
  color           : var(--selection-foreground) !important;
}

.fill-super,
.group:hover .group-hover\:fill-superDuper,
:is(.dark .dark\:fill-superDark) {
  fill: var(--accent-foreground) !important;
}

.caret-superDuper {
  caret-color: var(--accent-foreground) !important;
}

.stroke-super,
.group:hover .group-hover\:stroke-superDuper,
:is(.dark .dark\:stroke-superDark),
:is(.dark .dark\:stroke-textMainDark) {
  stroke: var(--accent-foreground) !important;
}

:is(.dark .dark\:outline-superDark) {
  outline-color: var(--accent-foreground) !important;
}

.dark .dark\:hover\:ring-superDark:hover,
.hover\:\!ring-super:hover,
.hover\:ring-super:hover,
:is(.dark .dark\:focus\:ring-borderMainDark:focus),
.dark .dark\:ring-superDark,
.ring-super {
  --tw-ring-color: var(--accent-foreground) !important;
}

.\!bg-textMain .text-textMain path {
  color           : var(--accent-foreground) !important;
  background-color: var(--accent-foreground) !important;
}

html.dark .dark\:text-textMainDark {
  color: var(--text-main) !important;
}

html.dark .dark\:\!text-backgroundDark {
  color: var(--text-main) !important;

  & {
    color: var(--accent-foreground) !important;
  }
}

.ring-2 {
  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000) !important;
}

.bg-super,
.md\:hover\:bg-super:hover,
:is(.dark .dark\:bg-textMainDark),
:is(.dark .dark\:bg-superDark) {
  background-color: var(--accent-foreground) !important;
  color           : white;
}

.text-super,
.group:hover .md\:group-hover\:text-super,
.prose :where(a):not(:where([class~='not-prose'] *)),
:is(.dark .dark\:md\:hover\:text-textMainDark:hover),
.selection\:text-textMain::selection,
.selection\:bg-superDuper ::selection {
  color: var(--accent-foreground) !important;
}

html.dark {

  & .selection\:text-textMain::selection,
  & .selection\:bg-superDuper ::selection {
    color           : var(--accent-foreground) !important;
    background-color: var(--background) !important;
  }
}

& .selection\:text-textMain::selection,
& .selection\:bg-superDuper ::selection {
  color           : var(--accent-foreground) !important;
  background-color: var(--secondary) !important;
}

html.dark {

  & code::selection,
  & code *::selection {
    color     : var(--accent-foreground) !important;
    background: var(--accent-foreground-darker) !important;
  }
}

.mb-sm.flex.w-full.items-center.justify-between svg {
  color: var(--accent-foreground) !important;
}

.focus\:ring-superDark:focus {
  --tw-ring-color: var(--accent-foreground) !important;
}

[data-testid="collection-preview"]:hover>div>div:first-child {
  background-color: var(--accent-foreground) !important;
}




/* Pro search border indicator */
div.data-\[state\=checked\]\:dark\:before\:\!bg-superDark:is(.dark *)[data-state=checked]:before {
  background-color: var(--accent-foreground) !important;
}

.pro-search {

  & .items-center.grid-rows-1fr-auto.grid.grid-cols-3.w-full.outline-none.focus\:outline-none.focus\:ring-borderMain,
  & #query-box-follow-up-container~* .grow.block>*>* {
    transition    : all 0.15s ease-in-out;
    outline       : 1px solid var(--accent-foreground) !important;
    outline-offset: 0px;

    &:has(textarea:focus) {
      box-shadow: 0 0 5px 0 var(--accent-foreground-darker) !important;
    }
  }
}


/* Popovers behavior normalization */
body[data-scroll-locked].bg-transparent {
  --removed-body-scroll-bar-size: 0 !important;
  margin-right                  : 0 !important;
  overflow                      : unset !important;
  pointer-events                : auto !important;
}

html {
  overflow: unset !important;
}

/* Markdown Query Wrapper */
.my-md.md\:my-lg:has(textarea) #markdown-query-wrapper {
  display: none;
}

html.dark #markdown-query-wrapper {
  & pre code {
    color: var(--foreground) !important;
  }
}

#markdown-query-wrapper pre {
  background  : #1d1f21;
  padding-left: 0.8rem;
  padding-top : 0.8rem;
  width       : 100% !important;
  max-width   : 90vw !important;

  code {
    color     : #e8e8e8 !important;
    background: #1d1f21;
  }

  &.retracted {
    max-height: 200px;
  }
}

/* Miscs */
.pointer-events-none.fixed.z-10 {
  z-index: 12 !important;
}

.text-shadow-hover:hover {
  text-shadow: 0 0 10px var(--accent-foreground) !important;
}

.data-\[state\=open\]\:animate-slideUpAndFadeIn {
  z-index: 2;
}

/* Markdown block line numbers */
pre {
  counter-reset: line;
}

pre code.line:before {
  content          : counter(line);
  counter-increment: line;
  display          : inline-block;
  width            : 2.2em;
  color            : var(--muted-foreground);
  opacity          : .4;
}

:root {
  --markdownBlockToolbarTop: 3.35rem;
}

body.thread-message-sticky-toolbar {
  --markdownBlockToolbarTop: 6.45rem;
}

[data-popper-reference-hidden="true"] {
  display: none;
}

/* Prevent thread layout shifts */
body {

  &.alternate-markdown-block {
    & div.w-full.max-w-\[90vw\]:not(.markdown-block-wrapper):has(> pre) {
      padding-top: .8125rem;
    }

    & div.w-full.max-w-\[90vw\]:has(> pre) {
      border       : 1px solid var(--border);
      margin       : 1rem 0;
      background   : #1d1f21;
      border-radius: calc(var(--radius) - 2px);
    }

    & pre:has(.absolute:empty) code:first-of-type {
      white-space: pre-wrap !important;
      white-space: pre-line !important;
    }

  }

  &.thread-message-sticky-toolbar {
    & .md\:grid.grid-cols-12.gap-xl:not(:has(.thread-message-toolbar-container)) {
      padding-top: 3.5rem !important;
    }

    & *:has(#markdown-query-wrapper:not(.\!tw-hidden))>.whitespace-pre-line.break-words {
      display: none;
    }

    & .md\:grid.grid-cols-12.gap-xl .mt-sm.flex.items-center.justify-between {
      display: none;
    }
  }

}

/* Hide unnecessary elements */
body {

  &.hide-native-pro-search-switch .gap-sm.group\/switch.flex.cursor-default.items-center.cursor-pointer[data-testid="copilot-toggle"],
  &.hide-scroll-to-bottom-button .pointer-events-auto .mb-2.flex.justify-center {
    display: none !important;
  }
}

/* adjust-selectors-border-radius */
.grow.block:has(textarea[placeholder="Ask anything..."]) button:not([aria-label="Submit"]):not([data-testid="copilot-toggle"]).rounded-full {
  border-radius: 0.375rem !important
}

/* adjust-query-box-width */
.pointer-events-none.fixed.z-10 {
  &>.pointer-events-auto.md\:col-span-8:has(textarea) {
    grid-column: span 12 / span 12 !important;
    z-index    : 20 !important;
  }

  @media (min-width: 768px) {
    bottom: .3rem !important;
  }
}

/* collapse-empty-thread-visual-columns */
.collapse-empty-thread-visual-columns {

  & .visual-col {
    display    : none !important;
    grid-column: unset !important;
  }

  & .message-block:has(.visual-col > div > div:nth-child(2)) .visual-col {
    display    : block !important;
    grid-column: span 4 / span 4 !important;
  }

  & .message-col {
    grid-column: span 12 / span 12 !important;
  }

  & .message-block:has(.visual-col > div > div:nth-child(2)) .message-col {
    grid-column: span 8 / span 8 !important;
  }
}

